<resources>
    <string name="app_name">PracticeSqliteDB</string>
    <string name="username_input_hint">username</string>
    <string name="password_input_hint">password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="name_text_field">Name</string>
    <string name="username_signup">username</string>
    <string name="name_signup">name</string>
    <string name="email_signup">email</string>
    <string name="password_signup">password</string>
    <string name="sign_up_button_text_signup">SIGN UP</string>
    <string name="welcome_screen_text">WELCOME WELCOME</string>
    <string name="confirm_password_signup">confirm password</string>
    <string name="viewlist_list">ViewList</string>
</resources>
