<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_shape_background"
        android:fontFamily="sans-serif"
        android:hint="@string/username_input_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_shape_background"
        android:fontFamily="sans-serif"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="300dp"
        android:text="@string/log_in_button"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textSize="@dimen/text_size"
        android:backgroundTint="#17a783"
        android:background="@drawable/round_shape_background"
        android:onClick="gotoDisplayScreen"/>

    <Button
        android:id="@+id/signupButtonlogin"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="400dp"
        android:text="@string/sign_up_button_text_signup"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textSize="@dimen/text_size"
        android:backgroundTint="#17a783"
        android:background="@drawable/round_shape_background"
        android:onClick="gotoSignupScreen"/>


</RelativeLayout>